--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: 我的笔记本
-site_url: https://mahuaqing2049.github.io/
+site_url: https://MaHuaqing2049.github.io/
 theme:
   name: material
 
